# anemotion

./: .gitignore  CMakeLists.txt  Makefile  README.md  anemotion.cpp  anemotion.h  anemotion.kdev4  config.js  datasession.cpp
apps/: details.h  list.cpp  list.h
apps/user/: profile.cpp
css/: profile.css
data/: content.h  master.h  profile.h
model/: defines.h  frame.cpp  frame.h  image.h  user.cpp  user.h  video.h
view/: content.tmpl  details.tmpl  list.tmpl
view/user/: details.tmpl  list.tmpl  master.tmpl  profile.tmpl
